# EngineGL

./: .gitignore  CMakeLists.txt
resources/: default_shader.frag  default_shader.vert  shape_renderer.frag  shape_renderer.vert  triangle.vert
resources/Tilemap/: map.tmx  textures.tsx  tile_project.tiled-session
src/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  app.cpp  app.h  main.cpp  my_scene.cpp  my_scene.h  scene.cpp  sprite.cpp  sprite.h
src/components/: components.h
src/events/: event.h
src/graphics/: Drawable.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshInfo.cpp  MeshInfo.h  Shader.cpp  Shader.h  SpriteBatch.cpp  SpriteBatch.h  Texture.cpp  Texture.h  font.cpp  font.h  orthographic_camera.cpp  orthographic_camera.h  render_types.h  renderer.cpp  renderer.h  shader.h  shape_renderer.cpp  shape_renderer.h  sprite_batch.cpp  sprite_batch.h  texture_2d.cpp  texture_2d.h
src/input/: keyboard.h
src/main/: app.cpp  app.h  main.cpp
src/resource_types/: texture_2d.cpp  tilemap.cpp  tilemap.h  tileset.cpp  tileset.h
src/scenes/: my_scene.cpp  my_scene.h  scene.cpp  scene.h
src/systems/: collision_detection_system.cpp  collision_detection_system.h  overlap_correction_system.cpp  overlap_correction_system.h  render_system.cpp  render_system.h  scene.h  shape_renderer_system.cpp  shape_renderer_system.h
src/utils/: asset.h  assets_manager.cpp  assets_manager.h  tilemap_handler.cpp  tilemap_handler.h  tmx_reader.cpp  tmx_reader.h  tsx_reader.cpp  tsx_reader.h
